@@ -45,12 +45,12 @@ void mpz_ull_init()
 #define BITS_PER_ULONG (sizeof(ulong)*CHAR_BIT)
 #ifdef ULL_NO_UL
 /****************************************************/
-void mpz_set_ull(mpz_t targ, unsigned long long src)
+void mpz_set_ull(mpz_t targ, uint64_t src)
 /****************************************************/
 {
   mpz_set_ui(targ,
              (ulong) ((src &
-                       ((unsigned long long) ULONG_MAX << BITS_PER_ULONG)) >>
+                       ((uint64_t) ULONG_MAX << BITS_PER_ULONG)) >>
                       BITS_PER_ULONG));
   mpz_mul_2exp(targ, targ, BITS_PER_ULONG);
   mpz_add_ui(targ, targ, (ulong) (src & ULONG_MAX));
@@ -59,29 +59,29 @@ void mpz_set_ull(mpz_t targ, unsigned long long src)
 
 #ifdef ULL_NO_UL
 /****************************************************/
-ullong mpz_get_ull(mpz_t src)
+uint64_t mpz_get_ull(mpz_t src)
 /****************************************************/
 {
-  ullong res;
+  uint64_t res;
 
-  if (sizeof(ullong) == 2 * sizeof(ulong)) {
+  if (sizeof(uint64_t) == 2 * sizeof(ulong)) {
     mpz_fdiv_q_2exp(auxz, src, sizeof(ulong) * CHAR_BIT);
     res = mpz_get_ui(auxz);
     res <<= sizeof(ulong) * CHAR_BIT;
     res |= mpz_get_ui(src);
   } else {
 
-    if (sizeof(ulong) == sizeof(ullong))
+    if (sizeof(ulong) == sizeof(uint64_t))
       return mpz_get_ui(src);
     else {
       ulong i;
 
       res = mpz_get_ui(src);
       mpz_fdiv_q_2exp(auxz, src, CHAR_BIT * sizeof(ulong));
-      res |= ((ullong) mpz_get_ui(auxz)) << (sizeof(ulong) * CHAR_BIT);
-      for (i = 2; i * sizeof(ulong) < sizeof(ullong); i++) {
+      res |= ((uint64_t) mpz_get_ui(auxz)) << (sizeof(ulong) * CHAR_BIT);
+      for (i = 2; i * sizeof(ulong) < sizeof(uint64_t); i++) {
         mpz_fdiv_q_2exp(auxz, src, CHAR_BIT * sizeof(ulong));
-        res |= ((ullong) mpz_get_ui(auxz)) << (i * sizeof(ulong) * CHAR_BIT);
+        res |= ((uint64_t) mpz_get_ui(auxz)) << (i * sizeof(ulong) * CHAR_BIT);
       }
     }
   }
@@ -91,7 +91,7 @@ ullong mpz_get_ull(mpz_t src)
 
 #ifdef ULL_NO_UL
 /****************************************************/
-int mpz_cmp_ull(mpz_t op1, ullong op2)
+int mpz_cmp_ull(mpz_t op1, uint64_t op2)
 /****************************************************/
 {
   mpz_set_ull(auxz, op2);
@@ -101,7 +101,7 @@ int mpz_cmp_ull(mpz_t op1, ullong op2)
 
 #ifdef ULL_NO_UL
 /****************************************************/
-void mpz_mul_ull(mpz_t rop, mpz_t op1, ullong op2)
+void mpz_mul_ull(mpz_t rop, mpz_t op1, uint64_t op2)
 /****************************************************/
 {
   mpz_set_ull(auxz, op2);
@@ -111,12 +111,12 @@ void mpz_mul_ull(mpz_t rop, mpz_t op1, ullong op2)
 
 #ifdef ULL_NO_UL
 /****************************************************/
-long long int mpz_get_sll(mpz_t x)
+int64_t mpz_get_sll(mpz_t x)
 /****************************************************/
 {
   if (mpz_sgn(x) < 0) {
     mpz_neg(auxz2, x);
-    return -((long long int) mpz_get_ull(auxz2));
+    return -((int64_t) mpz_get_ull(auxz2));
   } else
     return mpz_get_ull(x);
 }
@@ -124,25 +124,25 @@ long long int mpz_get_sll(mpz_t x)
 
 #ifdef ULL_NO_UL
 /****************************************************/
-void mpz_set_sll(mpz_t x, long long int src)
+void mpz_set_sll(mpz_t x, int64_t src)
 /****************************************************/
 {
   if (src < 0) {
-    mpz_set_ull(x, (ullong) (-src));
+    mpz_set_ull(x, (uint64_t) (-src));
     mpz_neg(x, x);
   } else
-    mpz_set_ull(x, (ullong) src);
+    mpz_set_ull(x, (uint64_t) src);
 }
 #endif
 
 #ifdef ULL_NO_UL
 /****************************************************/
-int mpz_fits_ullong_p(mpz_t x)
+int mpz_fits_uint64_t_p(mpz_t x)
 /****************************************************/
 {
   if (mpz_sgn(x) < 0)
     return 0;
-  if (mpz_sizeinbase(x, 2) > CHAR_BIT * sizeof(ullong))
+  if (mpz_sizeinbase(x, 2) > CHAR_BIT * sizeof(uint64_t))
     return 0;
   return 1;
 }
